--- a/wp-content/themes/splitvcard/stylec8f9.css
+++ b/wp-content/themes/splitvcard/stylec8f9.css
@@ -665,7 +665,7 @@ border-radius: 50%;
 }
 
 .skill.des .progress .percentage {
-	background-color: #efefef;
+	background-color: #505050;
 }
 
 .skill.dev .progress .percentage {
